# libpolypseud

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  polypseud.c  polypseud.h
